--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>com.github.yuiskw</groupId>
   <artifactId>bigquery-to-datastore</artifactId>
-  <version>0.4.1</version>
+  <version>0.5.0-rc1</version>
 
   <packaging>jar</packaging>
 
