--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>com.github.yuiskw</groupId>
   <artifactId>bigquery-to-datastore</artifactId>
-  <version>0.5.0-rc1</version>
+  <version>0.5.0</version>
 
   <packaging>jar</packaging>
 
@@ -173,7 +173,6 @@
           <groupId>org.apache.beam</groupId>
           <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
           <version>${beam.version}</version>
-          <scope>runtime</scope>
         </dependency>
       </dependencies>
     </profile>
