--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,9 +40,19 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+      - run:
           name: push a docker image
           command: |
-            echo "$DOCKERHUB_USER"
+            docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASS"
+            make clean
+            make build-docker-version
 
 workflows:
   version: 2
@@ -55,8 +65,8 @@ workflows:
       - push:
           requires:
             - build
-          filters:
-            tags:
-              only: /[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
+          #filters:
+          #  tags:
+          #    only: /[0-9]+(\.[0-9]+)*.*/
+          #  branches:
+          #    ignore: /.*/
