--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,15 @@ jobs:
     <<: *container_config
     steps:
       - checkout
+      - setup_remote_docker
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - run:
           name: install dependencies
           command: |
@@ -19,22 +28,13 @@ jobs:
           command: |
             make clean
             make package
-            make test-command
-  test:
-    <<: *container_config
-    steps:
-      - checkout
-      - run:
-          name: install dependencies
-          command: |
-            apt-get update -y && apt-get install -y build-essential maven
-      - run:
-          name: run unit tests
-          command: |
-            make clean
-            make checkstyle
             make test
-  push:
+            make test-command
+      - run:
+          name: build docker image
+          command: |
+            make build-docker-version
+  build_and_push:
     <<: *container_config
     steps:
       - checkout
@@ -52,25 +52,37 @@ jobs:
           command: |
             apt-get update -y && apt-get install -y build-essential maven
       - run:
-          name: push a docker image
+          name: build package
+          command: |
+            make clean
+            make package
+            make test
+            make test-command
+      - run:
+          name: build docker image
+          command: |
+            make build-docker-version
+      - run:
+          name: push docker image
           command: |
             docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASS"
-            make clean
-            make build-docker-version
+            make push-docker-version
 
 workflows:
   version: 2
-  build_test_push:
+  build_workflow:
     jobs:
-      - test
       - build:
-          requires:
-            - test
-      - push:
-          requires:
-            - build
-          #filters:
-          #  tags:
-          #    only: /[0-9]+(\.[0-9]+)*.*/
-          #  branches:
-          #    ignore: /.*/
+          filters:
+            branches:
+              only: /.*/
+            tags:
+              ignore: /.*/
+  build_and_push_workflow:
+    jobs:
+      - build_and_push:
+          filters:
+            tags:
+              only: /[0-9]+(\.[0-9]+)*.*/
+            branches:
+              ignore: /.*/
