--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,6 @@ workflows:
       - build_and_push:
           filters:
             tags:
-              only: /[0-9]+(\.[0-9]+)*.*/
+              only: /.*/
             branches:
               ignore: /.*/
